This is basically sexy 2. I made a lot of things much simpler and added many more comments. This version is worth building off of.

--- a/src/sexy/sexy.vcxproj.filters
+++ b/src/sexy/sexy.vcxproj.filters
@@ -14,16 +14,7 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
     <Filter Include="Header Files\sexy">
-      <UniqueIdentifier>{68492691-cafb-418f-9e06-dfd6813757e7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\sexy_impl">
-      <UniqueIdentifier>{22d15edf-71f1-42c7-aec9-734c12e65183}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\sexy">
-      <UniqueIdentifier>{77b479ec-b2e8-4fc9-b2c9-b9161f334e7f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\sexy_impl">
-      <UniqueIdentifier>{88d1cb77-f091-4640-8bb6-7c516100d4d4}</UniqueIdentifier>
+      <UniqueIdentifier>{5e00cd6b-8c7a-4c78-9707-061bb20fd2e8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -33,40 +24,40 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="component_register.h">
+      <Filter>Header Files\sexy</Filter>
+    </ClInclude>
+    <ClInclude Include="component_description.h">
+      <Filter>Header Files\sexy</Filter>
+    </ClInclude>
+    <ClInclude Include="system_register.h">
+      <Filter>Header Files\sexy</Filter>
+    </ClInclude>
+    <ClInclude Include="system_description.h">
+      <Filter>Header Files\sexy</Filter>
+    </ClInclude>
     <ClInclude Include="sexy.h">
       <Filter>Header Files\sexy</Filter>
     </ClInclude>
-    <ClInclude Include="entity.h">
-      <Filter>Header Files\sexy</Filter>
-    </ClInclude>
-    <ClInclude Include="component.h">
+    <ClInclude Include="typedefs.h">
       <Filter>Header Files\sexy</Filter>
     </ClInclude>
     <ClInclude Include="system.h">
       <Filter>Header Files\sexy</Filter>
     </ClInclude>
+    <ClInclude Include="iterator.h">
+      <Filter>Header Files\sexy</Filter>
+    </ClInclude>
     <ClInclude Include="system_impl.h">
-      <Filter>Header Files\sexy_impl</Filter>
+      <Filter>Header Files\sexy</Filter>
+    </ClInclude>
+    <ClInclude Include="component.h">
+      <Filter>Header Files\sexy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="component.cpp">
-      <Filter>Source Files\sexy</Filter>
-    </ClCompile>
-    <ClCompile Include="entity.cpp">
-      <Filter>Source Files\sexy</Filter>
-    </ClCompile>
-    <ClCompile Include="system.cpp">
-      <Filter>Source Files\sexy</Filter>
-    </ClCompile>
-    <ClCompile Include="sexy.cpp">
-      <Filter>Source Files\sexy</Filter>
-    </ClCompile>
-    <ClCompile Include="system_impl.cpp">
-      <Filter>Source Files\sexy_impl</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
