--- a/src/sexy/sexy.vcxproj
+++ b/src/sexy/sexy.vcxproj
@@ -62,18 +62,18 @@
       </AdditionalLibraryDirectories>
     </Lib>
     <PostBuildEvent>
-      <Command>echo f | xcopy /y $(SolutionDir)sexy\component.h $(OutDir)sexy\include\sexy\component.h
-echo f | xcopy /y $(SolutionDir)sexy\component_description.h $(OutDir)sexy\include\sexy\component_description.h
-echo f | xcopy /y $(SolutionDir)sexy\component_register.h $(OutDir)sexy\include\sexy\component_register.h
-echo f | xcopy /y $(SolutionDir)sexy\iterator.h $(OutDir)sexy\include\sexy\iterator.h
-echo f | xcopy /y $(SolutionDir)sexy\sexy.h $(OutDir)sexy\include\sexy\sexy.h
-echo f | xcopy /y $(SolutionDir)sexy\system.h $(OutDir)sexy\include\sexy\system.h
-echo f | xcopy /y $(SolutionDir)sexy\system_description.h $(OutDir)sexy\include\sexy\system_description.h
-echo f | xcopy /y $(SolutionDir)sexy\system_impl.h $(OutDir)sexy\include\sexy\system_impl.h
-echo f | xcopy /y $(SolutionDir)sexy\system_register.h $(OutDir)sexy\include\sexy\system_register.h
-echo f | xcopy /y $(SolutionDir)sexy\typedefs.h $(OutDir)sexy\include\sexy\typedefs.h
+      <Command>echo f | xcopy /y "$(SolutionDir)sexy\component.h" "$(OutDir)sexy\include\sexy\component.h"
+echo f | xcopy /y "$(SolutionDir)sexy\component_description.h" "$(OutDir)sexy\include\sexy\component_description.h"
+echo f | xcopy /y "$(SolutionDir)sexy\component_register.h" "$(OutDir)sexy\include\sexy\component_register.h"
+echo f | xcopy /y "$(SolutionDir)sexy\iterator.h" "$(OutDir)sexy\include\sexy\iterator.h"
+echo f | xcopy /y "$(SolutionDir)sexy\sexy.h" "$(OutDir)sexy\include\sexy\sexy.h"
+echo f | xcopy /y "$(SolutionDir)sexy\system.h" "$(OutDir)sexy\include\sexy\system.h"
+echo f | xcopy /y "$(SolutionDir)sexy\system_description.h" "$(OutDir)sexy\include\sexy\system_description.h"
+echo f | xcopy /y "$(SolutionDir)sexy\system_impl.h" "$(OutDir)sexy\include\sexy\system_impl.h"
+echo f | xcopy /y "$(SolutionDir)sexy\system_register.h" "$(OutDir)sexy\include\sexy\system_register.h"
+echo f | xcopy /y "$(SolutionDir)sexy\typedefs.h" "$(OutDir)sexy\include\sexy\typedefs.h"
 
-echo f | xcopy /y $(SolutionDir)Debug\sexy.lib $(OutDir)sexy\lib\sexy.lib</Command>
+echo f | xcopy /y "$(SolutionDir)Debug\sexy.lib" "$(OutDir)sexy\lib\sexy.lib"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
