Made some fixes here and there.

--- a/src/sexy/sexy.vcxproj
+++ b/src/sexy/sexy.vcxproj
@@ -67,6 +67,7 @@ echo f | xcopy /y "$(SolutionDir)sexy\component_description.h" "$(OutDir)sexy\in
 echo f | xcopy /y "$(SolutionDir)sexy\component_register.h" "$(OutDir)sexy\include\sexy\component_register.h"
 echo f | xcopy /y "$(SolutionDir)sexy\events.h" "$(OutDir)sexy\include\sexy\events.h"
 echo f | xcopy /y "$(SolutionDir)sexy\iterator.h" "$(OutDir)sexy\include\sexy\iterator.h"
+echo f | xcopy /y "$(SolutionDir)sexy\pair_hasher.h" "$(OutDir)sexy\include\sexy\pair_hasher.h"
 echo f | xcopy /y "$(SolutionDir)sexy\sexy.h" "$(OutDir)sexy\include\sexy\sexy.h"
 echo f | xcopy /y "$(SolutionDir)sexy\system.h" "$(OutDir)sexy\include\sexy\system.h"
 echo f | xcopy /y "$(SolutionDir)sexy\system_description.h" "$(OutDir)sexy\include\sexy\system_description.h"
@@ -99,6 +100,7 @@ echo f | xcopy /y "$(OutDir)sexy.lib" "$(OutDir)sexy\lib\sexy.lib"</Command>
     <ClInclude Include="component_description.h" />
     <ClInclude Include="events.h" />
     <ClInclude Include="iterator.h" />
+    <ClInclude Include="pair_hasher.h" />
     <ClInclude Include="sexy.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="system.h" />
