--- a/src/sexy/sexy.vcxproj.filters
+++ b/src/sexy/sexy.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="events.h">
       <Filter>Header Files\sexy</Filter>
     </ClInclude>
+    <ClInclude Include="pair_hasher.h">
+      <Filter>Header Files\sexy</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
